fix the auth service bugs and add service correctly